[B]3.2.5[/B]
- fixed: GetIMDBPlotById, ParseIMDBPlot, GetIMDBTaglineById, ParseIMDBTagline to use xx-reference.html

[B]3.2.5[/B]
- fixed: Genres from IMDb were not getting scraped in some cases

[B]3.2.4[/B]
- fixed: IMDbOutline and IMDbOutlineToPlot function. Thanks to afontenot!

[B]3.2.3[/B]
- fixed: MetaCritic

[B]3.2.2[/B]
- fixed: further fixes to IMDb

[B]3.2.1[/B]
- fixed: support both previous and new IMDb layout to secure scraping

[B]3.2.0[/B]
- fixed: scraping after IMDb site layout changes

[B]3.1.6[/B]
- fixed: IMDb outline as plot

[B]3.1.5[/B]
- changed: switch to https

[B]3.1.4[/B]
- fixed: IMDb AKA Titles

[B]3.1.3[/B]
- fixed: IMDb Genres for single genre movies

[B]3.1.2[/B]
- fixed: IMDb Genres

[B]3.1.1[/B]
- fixed: MetaCritic rating from IMDb

[B]3.1.0[/B]
- fixed: re-write most regular expressions following IMDb site layout changes

[B]3.0.8[/B]
- changed: another change to IMDb outline

[B]3.0.7[/B]
- changed: removed one of the IMDb outline catch

[B]3.0.6[/B]
- fixed: try to limit world wide English to over ride proper USA title

[B]3.0.5[/B]
- fixed: IMDb cast and outline following IMDb layout changes

[B]3.0.4[/B]
- fixed: IMDb plot after IMDb layout changes

[B]3.0.3[/B]
- fixed: World-wide English title won't scraped correctly

[B]3.0.2[/B]
- Use TV certification in the absence of MPAA ones

[B]3.0.1[/B]
- fixed: USA Title won't scraped correctly under some circumstances, plot outline quirks, IMDB Posters

[B]3.0.0[/B]
- fixed: IMDb plot outline under some circumstances

[B]2.9.9[/B]
- fixed: Thumb for IMDb cast

[B]2.9.8[/B]
- fixed: IMDb outline for some movies

[B]2.9.7[/B]
- changed: attempt to scrape generic local title from IMDb if multiple are available

[B]2.9.6[/B]
- fixed: movie title issues after IMDb layout changes

[B]2.9.5[/B]
- fixed: IMDb Full credits after IMDb layout changes

[B]2.9.4[/B]
- fixed: USA certification rating due to IMDb changes

[B]2.9.3[/B]
- fixed: always get USA rating regardless of the country set