@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <scraperfunctions>
 	<GetIMDBGenresById dest="5">
-		<RegExp input="$$1" output="&lt;details&gt;&lt;url cache=&quot;$$1-main.html&quot; function=&quot;ParseIMDBGenres&quot;&gt;https://www.imdb.com/title/$$1/|accept-language=en-us&lt;/url&gt;&lt;/details&gt;" dest="5">
+		<RegExp input="$$1" output="&lt;details&gt;&lt;url cache=&quot;$$1-reference.html&quot; function=&quot;ParseIMDBGenres&quot;&gt;https://www.imdb.com/title/$$1/|accept-language=en-us&lt;/url&gt;&lt;/details&gt;" dest="5">
 			<expression noclean="1" />
 		</RegExp>
 	</GetIMDBGenresById>
 	<ParseIMDBGenres dest="5">
 		<RegExp input="$$2" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
 			<RegExp input="$$1" output="\1" dest="6">
-				<expression noclean="1">,&quot;genre&quot;:\[([^\]]+)]</expression>
-			</RegExp>
+				<expression noclean="1">label&quot;&gt;Genres&lt;/td&gt;(.*?)&lt;/td&gt;</expression>
+			</RegExp>		
 			<RegExp input="$$6" output="&lt;genre&gt;\1&lt;/genre&gt;" dest="2">
-				<expression repeat="yes">&quot;([^&quot;]+)&quot;</expression>
-			</RegExp>
-			<RegExp input="$$1" output="\1" dest="6">
-				<expression noclean="1">,\s*&quot;genre&quot;:\s(&quot;[^&quot;]+&quot;),</expression>
-			</RegExp>
-			<RegExp input="$$1" output="\1" dest="6">
-				<expression noclean="1">&quot;genre&quot;:\s\[(.*?)\]</expression>
-			</RegExp>
-			<RegExp input="$$6" output="&lt;genre&gt;\1&lt;/genre&gt;" dest="2">
-				<expression repeat="yes">&quot;([^&quot;]+)&quot;</expression>
+				<expression repeat="yes">&lt;a href=.*?&gt;(.*?)&lt;/a&gt;</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
