@@ -1,3 +1,6 @@
+[B]3.2.8[/B]
+- fixed: movies with more than 3 genres not scrapped. Changed GetIMDBGenresById and ParseIMDBGenres to use xx-reference.html
+
 [B]3.2.5[/B]
 - fixed: GetIMDBPlotById, ParseIMDBPlot, GetIMDBTaglineById, ParseIMDBTagline to use xx-reference.html
 
